api: fetch by external identifier should be plural
